[gd_scene load_steps=11 format=3 uid="uid://dnjnojcuqdnx2"]

[ext_resource type="Script" path="res://characters/enemy/slimes/BlueSlime.gd" id="1_tisow"]
[ext_resource type="Texture2D" uid="uid://cra7ah5nec2as" path="res://graphics/images/items/apple.png" id="2_1cc7a"]
[ext_resource type="Texture2D" uid="uid://w0xtcrrtsnsw" path="res://graphics/images/enemies/slimeAnimation.png" id="2_8gjqx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7trjj"]
radius = 400.0
height = 800.0

[sub_resource type="Animation" id="Animation_tso2x"]
resource_name = "idle"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ywsjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fpffk"]
_data = {
"RESET": SubResource("Animation_ywsjk"),
"idle": SubResource("Animation_tso2x")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_h6h4g"]
radius = 64.0078

[sub_resource type="CircleShape2D" id="CircleShape2D_bt21a"]
radius = 7.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ip74e"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 3.65
initial_velocity_max = 36.49
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 34.671
damping_max = 100.0
scale_min = 0.3
scale_max = 0.5

[node name="BlueSlime" type="CharacterBody2D" groups=["Persist"]]
z_index = 1
collision_layer = 512
collision_mask = 769
script = ExtResource("1_tisow")
speed = 15

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8gjqx")
hframes = 12
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.01, 0.01)
shape = SubResource("CapsuleShape2D_7trjj")
one_way_collision_margin = 0.0
debug_color = Color(0.0901961, 0.6, 1, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fpffk")
}

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CircleShape2D_h6h4g")
debug_color = Color(0.513726, 0.513726, 0.513726, 0.419608)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_bt21a")
debug_color = Color(0, 0.635294, 0.423529, 0.419608)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 4)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_ip74e")
texture = ExtResource("2_1cc7a")
lifetime = 5.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 0, 0)

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
